--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,7 @@
-/* styles go here */
 .form__list {
   margin-bottom: 20px;
 }
 
-.form__list-item:not(:last-child) {
-  display: block;
+.form-box:not(:last-child) {
   margin-bottom: 10px;
 }
