--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,17 @@
 /* styles go here */
+
+.fieldset {
+  margin-bottom: 20px;
+}
+
+/* div {
+  margin-bottom: 10px;
+} */
+
+div {
+  margin-bottom: 10px;
+}
+
+.last {
+  margin-bottom: 0;
+}
