--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,7 @@
-/* styles go here */
+        .article {
+            margin-top: 20px;
+        }
+        
+        .inputField {
+            margin-top: 10px;
+        }
