--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,12 @@
 /* styles go here */
+.form-field {
+  display: block;
+}
+
+.bloc {
+  margin-bottom: 20px;
+}
+
+label {
+  margin-bottom: 10px;
+}
