--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
 /* styles go here */
+input,
+.cont {
+  margin-bottom: 10px;
+}
+
+input:last-of-type {
+  margin-bottom: 0;
+}
+
+fieldset {
+  margin-bottom: 20px;
+}
