--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,17 @@
 /* styles go here */
+.form {
+  display: block;
+}
+
+.group {
+  margin-bottom: 20px;
+}
+
+.form-field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form-field:last-child {
+  margin-bottom: 0;
+}
