--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,9 @@
 /* styles go here */
+.input-fields-group {
+  margin-bottom: 20px;
+}
+
+.input-field:not(:last-child) {
+  display: block;
+  margin-bottom: 10px;
+}
