--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,10 @@ fieldset {
   margin: 10px 0;
 }
 
+.distance {
+  margin-top: 10px ;
+}
+
 .form-field {
   display: block;
-  margin-top: 10px;
 }
