errors fixed, add br

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
-fieldset {
+.distance2 {
+  margin-top: 20px;
+}
+
+.distanceboth {
   margin: 10px 0;
 }
 
 .distance {
-  margin-top: 10px ;
-}
-
-.form-field {
-  display: block;
+  margin-top: 10px;
 }
