--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,9 @@
-/* styles go here */
+fieldset .form-field:not(:first-child):not(:last-child) {
+
+  display: block;
+  margin-bottom: 10px;
+}
+
+fieldset {
+  margin-bottom: 20px;
+}
