--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,12 @@
-/* styles go here */
-p {
-  padding: 0;
-  margin: 0;
+.one:not(:last-child) {
+  display: block;
   margin-bottom: 10px;
 }
 
-fieldset {
+.fieldset {
   margin-bottom: 20px;
 }
 
-.noPad {
-  margin-bottom: 0;
+.button {
+  margin-bottom: 20px;
 }
