--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,8 @@
-.one:not(:last-child) {
+.form_field:not(:last-child) {
   display: block;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
-.fieldset {
-  margin-bottom: 20px;
-}
-
-.button {
+.form_group {
   margin-bottom: 20px;
 }
